--- a/configs/coc-settings.json
+++ b/configs/coc-settings.json
@@ -10,6 +10,7 @@
       "rootPatterns": [".flowconfig"]
     }
   },
+  "explorer.file.showHiddenFiles":true,
   "explorer.icon.enableNerdfont":true,
   "explorer.keyMappings.global":{
     "<cr>":["expandable?", ["expanded?", "collapse", "expand"], "open"]
