Add 1. disable file name color

--- a/configs/coc-settings.json
+++ b/configs/coc-settings.json
@@ -10,6 +10,7 @@
       "rootPatterns": [".flowconfig"]
     }
   },
+  "explorer.filename.colored.enable": false,
   "explorer.file.showHiddenFiles":true,
   "explorer.icon.enableNerdfont":true,
   "explorer.keyMappings.global":{
