--- a/configs/coc/coc-settings.json
+++ b/configs/coc/coc-settings.json
@@ -1,5 +1,10 @@
 {
   "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod"],
+      "filetypes": ["go"]
+    },
     "flow": {
       "command": "flow",
       "args": ["lsp"],
